<resources>
    <string name="app_name">LMS</string>
    <string name="let_s_begin_growing_our_skills">Let\'s Begin Growing Our Skills.</string>
    <string name="home_second_quote">The complete App to start learning new skill and growing your skill.</string>
    <string name="get_started">Get Started</string>
    <string name="category">Category</string>
    <string name="back">Back</string>
    <string name="ready_to_learn">Ready To Learn?</string>
    <string name="choose_your_subject">Choose your subject.</string>
    <string name="social_media_class">Social Media Class</string>
    <string name="_15_course">15 Course</string>
    <string name="course_image">Course Image</string>
    <string name="hello_welcome">Hello, Welcome 👋</string>
    <string name="cameron_williamson">Cameron Williamson</string>
    <string name="profile_image">Profile Image</string>
    <string name="get_your_best_course_today">Get Your \n<font color="#6D57FC" face="inter">Best Course</font> Today!</string>
    <string name="ic_play">Play icon</string>
    <string name="ic_bookmark">ic_bookmark</string>
    <string name="by_leo_nikuma">By Leo Nikuma</string>
    <string name="course_pic">Course Image</string>
    <string name="_3d_illustration_course">3D Illustration\nCourse</string>
    <string name="course_of_the_week">Course of The Week</string>
    <string name="_3d_character_lumion">3D Character Lumion</string>
    <string name="duration_1hr_20min">Duration: 1hr 20min</string>
    <string name="rating">rating</string>
    <string name="top_image">Top Image</string>
    <string name="bottom_image">Bottom Image</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="detail_course">Detail Course</string>
    <string name="_3d_illustration_course2">3D Illustration Course</string>
    <string name="_12_lessons">12 Lessons</string>
    <string name="_1hr_20min">1hr 20min</string>
    <string name="course_description">This course will teach the basic how to start 3D from beginning to finish. 12 lessons more than 1 hour.</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="_00_trailer">00 - Trailer</string>
    <string name="_15_00_min">15:00 min</string>
    <string name="lock_icon">Lock Icon</string>
    <string name="time">time</string>
</resources>