<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CourseDetailActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/bottomImage"
            android:layout_width="match_parent"
            android:layout_height="244dp"
            android:contentDescription="@string/bottom_image"
            android:scaleType="fitXY"
            android:src="@drawable/course_detail" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="24dp"
            android:paddingTop="68dp"
            android:paddingEnd="24dp">

            <ImageView
                android:id="@+id/backArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:contentDescription="@string/back"
                android:focusable="true"
                android:src="@drawable/ic_arrow_back"
                app:tint="#FFFFFF" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:fontFamily="@font/urbanist"
                android:letterSpacing=".015"
                android:text="@string/detail_course"
                android:textColor="#E8E4FF"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/bookmarkIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/ic_bookmark"
                android:src="@drawable/ic_bookmark"
                app:tint="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingEnd="24dp">

            <!-- Course Title -->
            <TextView
                android:id="@+id/courseTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/urbanist_semibold"
                android:letterSpacing=".015"
                android:text="@string/_3d_illustration_course2"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

            <!-- Author Text -->


            <TextView
                android:id="@+id/courseAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_light"
                android:text="@string/by_leo_nikuma"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/whiteBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_marginTop="230dp"
            android:background="@drawable/rounded_background"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Lessons Header -->
            <LinearLayout
                android:id="@+id/lessonsHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <!-- Number of Lessons -->
                <TextView
                    android:id="@+id/lessonCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/urbanist_semibold"
                    android:letterSpacing=".015"
                    android:text="@string/_12_lessons"
                    android:textColor="#0C0A1C"
                    android:textSize="16sp" />

                <!-- Course Duration -->
                <ImageView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha=".65"
                    android:contentDescription="@string/time"
                    android:src="@drawable/ic_time"
                    app:tint="#1B163F" />

                <TextView
                    android:id="@+id/courseDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:alpha=".65"
                    android:fontFamily="@font/urbanist"
                    android:text="@string/_1hr_20min"
                    android:textColor="#1B163F"
                    android:textSize="14sp" />
            </LinearLayout>

            <!-- Course Description -->
            <TextView
                android:id="@+id/courseDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha=".65"
                android:fontFamily="@font/inter_light"
                android:letterSpacing=".015"
                android:paddingBottom="16dp"
                android:text="@string/course_description"
                android:textColor="#1B163F"
                android:textSize="12sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/lessonsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:itemCount="12"
                tools:listitem="@layout/item_lesson"
                />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>