<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".CategoryHomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="68dp"
            android:paddingBottom="8dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha=".65"
                    android:fontFamily="@font/inter"
                    android:letterSpacing=".015"
                    android:text="@string/hello_welcome"
                    android:textColor="#1B163F"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/userTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/urbanist_medium"
                    android:letterSpacing=".015"
                    android:text="@string/cameron_williamson"
                    android:textColor="#0C0A1C"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/profile_image"
                android:src="@drawable/profile" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/urbanist"
            android:letterSpacing=".015"
            android:text="@string/get_your_best_course_today"
            android:textColor="#0C0A1C"
            android:textSize="32sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="348dp"
            app:cardBackgroundColor="#F8F7FF"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <!-- Content Container -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <!-- Image Background -->
                <ImageView
                    android:id="@+id/courseImage"
                    android:layout_width="match_parent"
                    android:layout_height="324dp"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/course_pic"
                    android:scaleType="fitXY"
                    android:src="@drawable/course_image" />

                <!-- Bookmark Icon (Top Right) -->
                <ImageView
                    android:id="@+id/bookmarkIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="12dp"
                    android:contentDescription="@string/ic_bookmark"
                    android:src="@drawable/ic_bookmark"
                    app:tint="@android:color/white" />

                <!-- Play Button (Center) -->
                <ImageView
                    android:id="@+id/playButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:selectableItemBackground"
                    android:contentDescription="@string/ic_play"
                    android:padding="12dp"
                    android:src="@drawable/ic_play"
                    app:tint="@android:color/white" />

                <!-- Course Title -->
                <TextView
                    android:id="@+id/courseTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="46dp"
                    android:fontFamily="@font/urbanist_semibold"
                    android:letterSpacing=".015"
                    android:text="@string/_3d_illustration_course"
                    android:textColor="@color/white"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <!-- Author Text -->


                <TextView
                    android:id="@+id/courseAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/inter_light"
                    android:text="@string/by_leo_nikuma"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/urbanist_medium"
            android:letterSpacing=".015"
            android:text="@string/course_of_the_week"
            android:textColor="#0C0A1C"
            android:textSize="16sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <!-- Main Container -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <!-- Image on the left -->
                <ImageView
                    android:id="@+id/course_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginEnd="12dp"
                    android:contentDescription="@string/course_image"
                    android:background="@drawable/course_image_rounded_background"
                    android:scaleType="centerCrop"
                    android:src="@drawable/course_img" />

                <!-- Text Content -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <!-- Title -->
                    <TextView
                        android:id="@+id/course_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/urbanist"
                        android:letterSpacing=".015"
                        android:text="@string/_3d_character_lumion"
                        android:textColor="#0C0A1C"
                        android:textSize="14sp" />

                    <!-- Subtitle (Duration) -->
                    <TextView
                        android:id="@+id/course_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:alpha=".65"
                        android:fontFamily="@font/inter_light"
                        android:text="@string/duration_1hr_20min"
                        android:textColor="#1B163F"
                        android:textSize="12sp" />

                    <!-- Rating Bar -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">



                        <!-- Star Rating Icons -->
                        <include
                            layout="@layout/star"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />
                        <include
                            layout="@layout/star"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />
                        <include
                            layout="@layout/star"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />
                        <include
                            layout="@layout/star"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_star_half"
                            android:contentDescription="@string/rating"
                            app:tint="#FFA502" />
                    </LinearLayout>

                </LinearLayout>

                <!-- Arrow Icon (on the right) -->
                <ImageView
                    android:id="@+id/arrow_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/back_arrow"
                    android:src="@drawable/ic_arrow_right" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>