<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Bottom Image -->
    <ImageView
        android:id="@+id/bottomImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/bottom_image"
        android:scaleType="fitXY"
        android:src="@drawable/background" />

    <!-- Top Image -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/topImage"
            android:layout_width="355dp"
            android:layout_height="302dp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:contentDescription="@string/top_image"
            android:src="@drawable/illustration" />

        <LinearLayout
            android:id="@+id/whiteBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/rounded_background"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- First TextBox -->
            <TextView
                android:id="@+id/textBox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/urbanist_medium"
                android:padding="12dp"
                android:paddingBottom="8dp"
                android:text="@string/let_s_begin_growing_our_skills"
                android:textSize="32sp" />

            <!-- Second TextBox -->
            <TextView
                android:id="@+id/textBox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:alpha="0.80"
                android:fontFamily="@font/inter_light"
                android:padding="12dp"
                android:text="@string/home_second_quote"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <!-- Dot 1 -->
                    <View
                        android:layout_width="8dp"
                        android:layout_height="8dp"
                        android:layout_margin="4dp"
                        android:background="@drawable/dot_inactive" />

                    <!-- Dot 2 -->

                    <View
                        android:layout_width="8dp"
                        android:layout_height="8dp"
                        android:layout_margin="4dp"
                        android:background="@drawable/dot_inactive" />

                    <!-- Dot 3 -->
                    <View
                        android:layout_width="16dp"
                        android:layout_height="8dp"
                        android:layout_margin="4dp"
                        android:background="@drawable/dot_active" />
                </LinearLayout>

                <!-- Button -->
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/getStartedButton"
                    android:layout_width="221dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/button_background"
                    android:padding="12dp"
                    android:text="@string/get_started"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</FrameLayout>
